--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="box">
         <h2 class="box-title">Contact</h2>
         <ul class="list">
-          <li>📧 your_email@example.com</li>
+          <li>📧 rjaekawpxm@naver.com</li>
           <li>🐙
             <a href="https://github.com/rjaekawpxm1-netizen" target="_blank">
               github.com/rjaekawpxm1-netizen
