--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
       </div>
     </aside>
 
+    <section class="hero">
+      <h1>Hi, I'm <span>Junsu</span></h1>
+      <p>
+        데이터로 문제를 정의하고,<br>
+        서비스로 해결하는 개발자입니다.
+      </p>
+
+      <div class="hero-buttons">
+      <a href="#projects" class="btn-main">프로젝트 보기</a>
+      <a href="#contact" class="btn-sub">GitHub</a>
+      </div>
+      </section>
+   
+    
     <!-- 오른쪽 메인 컨텐츠 -->
     <main class="content">
       <!-- About -->
