--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+
+  <nav class="top-nav">
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <a href="#skills">Skills</a>
+  <a href="#contact">Contact</a>
+</nav>
+
   <div class="page">
     <!-- 왼쪽 프로필 영역 -->
     <aside class="sidebar">
