--- a/index.html
+++ b/index.html
@@ -341,7 +341,20 @@
           </li>
         </ul>
       </section>
+
+      <!-- Contact 섹션 -->
+      <section class="section" id="contact">
+        <h2>Contact</h2>
+        <p>협업, 프로젝트, 문의 — 언제든 환영합니다.</p>
+
+        <ul class="list">
+          <li>📧 your_email@example.com</li>
+          <li>🐙 GitHub: rjaekawpxm1-netizen</li>
+        </ul>
+      </section>
+      
     </main>
+    
   </div>
 </body>
 </html>
